--- a/goonies/public/index.html
+++ b/goonies/public/index.html
@@ -1,83 +1,114 @@
 <!DOCTYPE html>
 <html>
+
 <head lang="en">
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
   <title>The Goonies</title>
   <link rel="stylesheet" href="/screen.css">
 </head>
+
 <body>
   <h1>The Goonies</h1>
 
   <h2>The Originals</h2>
 
-  <h3>Mikey</h3>
+  <section class="originals">
+    <div class="goonie">
+      <img src="images/mikey.jpg" alt="Picture of Mikey" height="200">
+      <div>
+        <h3>Mikey</h3>
+        <p>Mikey is the leader of the Goonies. His family lives in the <q>goon docks</q> area of Astoria, OR.</p>
+      </div>
+    </div>
 
-  <img src="./images/mikey.jpg" alt="Picture of Mikey" height="200" />
+    <div class="goonie">
+      <img src="images/mouth.jpg" alt="Picture of Mouth" height="200">
+      <div>
+        <h3>Mouth</h3>
 
-  <p>Mikey is the leader of the Goonies. His family lives in the <q>goon docks</q> area of Astoria, OR.</p>
+        <p>Some facts about Clarke <q>Mouth</q> Devereaux:</p>
 
-  <h3>Mouth</h3>
+        <ul>
+          <li>Fluent in spanish</li>
+          <li>Owns a cool Member&rsquo;s Only&trade; jacket.</li>
+          <li>Mikey&rsquo;s lieutenant</li>
+        </ul>
+      </div>
+    </div>
 
-  <img src="./images/mouth.jpg" alt="Mouth" height="200" />
+    <div class="goonie">
+      <figure>
+        <img src="./images/chunk.gif" alt="Chunk" height="200" />
+        <figcaption>The <q>Truffle Shuffle</q></figcaption>
+      </figure>
+      <div>
+        <h3>Chunk</h3>
+      </div>
+    </div>
 
-  <p>Some facts about Clarke <q>Mouth</q> Devereaux:</p>
+    <div class="goonie">
+      <img src="./images/data.jpg" alt="Data" height="200">
+      <div>
+        <h3>Data</h3>
 
-  <ul>
-    <li>Fluent in spanish</li>
-    <li>Owns a cool Member&rsquo;s Only&trade; jacket.</li>
-    <li>Mikey&rsquo;s lieutenant</li>
-  </ul>
 
-  <h3>Chunk</h3>
+        <p>Here's some of Data's cool gadgets:</p>
 
-  <figure>
-    <img src="./images/chunk.gif" alt="Chunk" height="200" />
-    <figcaption>The <q>Truffle Shuffle</q></figcaption>
-  </figure>
+        <ol>
+          <li>Buckle Gripper</li>
+          <li>Bully Blinders</li>
+          <li>Pichers of Peril</li>
+          <li>Punch Out</li>
+          <li>Slick Shoes</li>
+          <li>Octo-blaster</li>
+        </ol>
+      </div>
+    </div>
 
-  <h3>Data</h3>
-
-  <img src="./images/data.jpg" alt="Data" height="200" />
-
-  <p>Here's some of Data's cool gadgets:</p>
-
-  <ol>
-    <li>Buckle Gripper</li>
-    <li>Bully Blinders</li>
-    <li>Pichers of Peril</li>
-    <li>Punch Out</li>
-    <li>Slick Shoes</li>
-    <li>Octo-blaster</li>
-  </ol>
-
-  <h3>One-Eyed Willy<sup>*</sup></h3>
-
-  <img src="./images/willy.jpg" alt="One-Eyed Willy" height="200" />
+    <div class="goonie">
+      <img src="./images/willy.jpg" alt="One-Eyed Willy" height="200">
+      <div>
+        <h3>One-Eyed Willy<sup>*</sup></h3>
+      </div>
+    </div>
+  </section>
 
   <h2>Other Goonies</h2>
 
-  <h3>Brand</h3>
+  <section class="others">
+    <div class="goonie">
+      <h3>Brand</h3>
 
-  <img src="./images/brand.jpg" alt="Brand" height="100" />
+      <img src="./images/brand.jpg" alt="Brand" height="100">
+    </div>
 
-  <h3>Andy</h3>
+    <div class="goonie">
+      <h3>Andy</h3>
 
-  <img src="./images/andy.jpg" alt="Andy" height="100" />
+      <img src="./images/andy.jpg" alt="Andy" height="100">
+    </div>
 
-  <h3>Stef</h3>
+    <div class="goonie">
+      <h3>Stef</h3>
 
-  <img src="./images/stef.jpg" alt="Stef" height="100" />
+      <img src="./images/stef.jpg" alt="Stef" height="100">
+    </div>
 
-  <h3>Sloth</h3>
+    <div class="goonie">
+      <h3>Sloth</h3>
 
-  <img src="./images/sloth.jpg" alt="Sloth" height="100" />
+      <img src="./images/sloth.jpg" alt="Sloth" height="100">
 
-  <blockquote>
-    Hey, you <em>guuuys</em>!
-  </blockquote>
+      <blockquote>
+        Hey, you <em>guuuys</em>!
+      </blockquote>
+    </div>
+  </section>
 
-  <hr />
+  <hr>
 
   <p><sup>*</sup> Post-humously declared <q>the first Goonie</q> by Mikey</p>
 </body>
+
 </html>
