--- a/goonies/public/index.html
+++ b/goonies/public/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <h1>The Goonies</h1>
+  <h1 title="A classic 80's movie">The Goonies</h1>
 
   <h2>The Originals</h2>
 
@@ -17,7 +17,7 @@
     <div class="goonie">
       <img src="images/mikey.jpg" alt="Picture of Mikey" height="200">
       <div>
-        <h3>Mikey</h3>
+        <h3><a href="http://goonies.wikia.com/wiki/Mikey">Mikey</a></h3>
         <p>Mikey is the leader of the Goonies. His family lives in the <q>goon docks</q> area of Astoria, OR.</p>
       </div>
     </div>
@@ -25,7 +25,7 @@
     <div class="goonie">
       <img src="images/mouth.jpg" alt="Picture of Mouth" height="200">
       <div>
-        <h3>Mouth</h3>
+        <h3><a href="/Mouth">Mouth</a></h3>
 
         <p>Some facts about Clarke <q>Mouth</q> Devereaux:</p>
 
@@ -43,7 +43,7 @@
         <figcaption>The <q>Truffle Shuffle</q></figcaption>
       </figure>
       <div>
-        <h3>Chunk</h3>
+        <h3 title="chunk"><a href="http://goonies.wikia.com/wiki/Chunk">Chunk</a></h3>
       </div>
     </div>
 
@@ -96,7 +96,7 @@
     </div>
 
     <div class="goonie">
-      <h3>Sloth</h3>
+      <h3 title="Likes Baby Ruth">Sloth</h3>
 
       <img src="./images/sloth.jpg" alt="Sloth" height="100">
 
