Use name instead of class to select slider

--- a/range-input-demo/public/index.html
+++ b/range-input-demo/public/index.html
@@ -9,7 +9,7 @@
   <body>
     <div class="number">0</div>
     <div>
-      <input class="slider" type="range" min="0" max="360">
+      <input name="hue" type="range" min="0" max="360">
     </div>
     <script src="/main.js" charset="utf-8"></script>
   </body>
