--- a/fibb-o-nate/src/index.html
+++ b/fibb-o-nate/src/index.html
@@ -7,11 +7,8 @@
 </head>
 <body>
   <main>
-    <input type="number" value="10">
-    <button>Fibb-o-nate!</button>
+    <input type="range" min="0" max="400" value="0">
   </main>
-
-  <ul class="fibbs">
-  </ul>
+  <ul class="fibbs"></ul>
 </body>
 </html>
